bug alignement ambiances et forces resolu

--- a/app/assets/stylesheets/pages/_restaurant_show.scss
+++ b/app/assets/stylesheets/pages/_restaurant_show.scss
@@ -92,7 +92,7 @@
     margin: auto;
   }
   .block-new-3 {
-    width: 240px;
+    width: 270px;
     margin: auto;
   }
 
